--- a/02-thrivetalk/scss/section/welcome.scss
+++ b/02-thrivetalk/scss/section/welcome.scss
@@ -1,33 +1,51 @@
 @use 'vars';
 
 .welcome {
-  &__round-rect {
-    // display: none;
-    position: absolute;
-    width: 807.71px;
-    height: 544.93px;
-    top: 40px;
-    right: -140px;
-    border-radius: 312.159px;
-    transform: matrix(-0.5, 0.87, 0.87, 0.5, 0, 0);
+  position: relative;
+  // overflow-x: hidden;
+  // overflow-y: auto;
+  &__decor {
+    &::before {
+      position: absolute;
+      display: block;
+      top: 40px;
+      right: -140px;
+      content: '';
 
-    background-color: vars.$accent-pastel-blue;
-  }
-  &__img {
-    // display: none;
-    position: absolute;
-    right: -131px;
-    top: 46px;
+      width: 807.71px;
+      height: 544.93px;
+      border-radius: 312.159px;
+      transform: matrix(-0.5, 0.87, 0.87, 0.5, 0, 0);
+
+      background-color: vars.$accent-pastel-blue;
+    }
+
+    &-img {
+      position: absolute;
+      display: block;
+      right: -131px;
+      top: 46px;
+    }
   }
 
   &__content {
     background-color: vars.$accent-pastel-yellow;
+
+    width: 77.57%;
     padding-top: 240px;
     margin-right: 323px;
     padding-left: 179.5px;
     padding-right: 454px;
     padding-bottom: 75px;
     border-bottom: 2px solid #fff;
+
+    @include vars.media-down(xxl) {
+      padding-left: 85px;
+    }
+
+    @include vars.media-down(xl) {
+      padding-left: 42px;
+    }
   }
 
   &__logo {
@@ -47,11 +65,14 @@
 
 .welcome-title {
   font-weight: vars.$bold;
-  font-size: vars.$r48;
+  font-size: 48px;
   margin: 0;
   color: vars.$accent-dark-blue;
   letter-spacing: -0.035em;
   line-height: 46px;
+  // @media (max-width: 1439px) {
+  //   font-size: vars.lerp(48, 24);
+  // }
 }
 
 .welcome-text {
